--- a/src/app/zoo/zoo.component.html
+++ b/src/app/zoo/zoo.component.html
@@ -1,2 +1,2 @@
 <h1>List of Animals</h1>
-<app-zoo-animal *ngFor="let animal of animalList" [animal]="animal"></app-zoo-animal>
+<app-zoo-animal *ngFor="let animal of animalList" [animal]="animal" (liked)='onLike(animal)'></app-zoo-animal>
