Deleted old onLike method

--- a/src/app/zoo-animal/zoo-animal.component.html
+++ b/src/app/zoo-animal/zoo-animal.component.html
@@ -1,3 +1,2 @@
 <p>{{ animal.name }}</p>
-<button (click)="liked.emit(animal)">like</button>
-<a routerLink="/info">info<a>
+<button (click)="addToLiked(animal)">like</button>
